--- a/src/style/_modules.scss
+++ b/src/style/_modules.scss
@@ -371,9 +371,6 @@ div.two-col.projects-card {
         margin: auto;
     }
     /* PROJECTS */
-    div.two-col.projects-card {
-        padding-bottom: 20px;
-    }
     .project-image {
         display: block;
         width: 300px;
